--- a/roles/ct-managment/tasks/rm-ct.yml
+++ b/roles/ct-managment/tasks/rm-ct.yml
@@ -1,6 +1,6 @@
-- name: "Stop container {{ ct_template.id }} / {{ ct_template.hostname }}"
+- name: "Stop container {{ hostname }}"
   proxmox:
-    vmid: "{{ ct_template.id }}"
+    hostname: "{{ hostname }}"
     api_user: "{{ proxmox_user }}"
     api_password: "{{ proxmox_password }}"
     api_host: "{{ proxmox_cluster_host }}"
@@ -8,9 +8,9 @@
     pool: "{{ proxmox_pool }}"
     force: yes
     state: stopped
-- name: "Remove container {{ ct_template.id }} / {{ ct_template.hostname }}"
+- name: "Remove container {{ hostname }}"
   proxmox:
-    vmid: "{{ ct_template.id }}"
+    hostname: "{{ hostname }}"
     api_user: "{{ proxmox_user }}"
     api_password: "{{ proxmox_password }}"
     api_host: "{{ proxmox_cluster_host }}"
