--- a/roles/vm-management/tasks/add-vm.yml
+++ b/roles/vm-management/tasks/add-vm.yml
@@ -1,15 +1,37 @@
-- name: "Create virtual machine {{ vm_template.id }} / {{ vm_template.hostname }}"
-  proxmox:
-    vmid: "{{ vm_template.id }}"
+- name: "Create virtual machine {{ vm_tpl.hostname }}"
+  proxmox_kvm:
+    api_user: "{{ proxmox_user }}"
+    api_password: "{{ proxmox_password }}"
+    api_host: "{{ proxmox_cluster_host }}"
+    name: "{{ vm_tpl.hostname }}"
+    node: "{{ proxmox_node }}"
+    pool: "{{ proxmox_pool }}"
+    boot: "dnc"
+    bootdisk: "ide2"
+    onboot: no
+    vcpus: "{{ vm_tpl.cpus }}"
+    memory: "{{ vm_tpl.memory }}"
+    scsihw: "virtio-scsi-pci"
+    net: {'net0': "virtio,bridge=vmbr1"}
+    ide: "{'ide2': 'templates:iso/{{ vm_tpl.iso }},media=cdrom' }"
+    state: present
+  register: vm_result
+- name: "Create and attach the root disk to {{ vm_tpl.hostname }}"
+  vars:
+    disk_name: "vm-{{ vm_result.vmid }}-disk-0.qcow2"
+    disk_size_w_u: {{ vm_tpl.disk_size }}G
+    disk_def: "{{ vm_tpl.storage }}:{{ vm_result.vmid }}/{{ disk_name }},size={{ disk_size_w_u }}"
+  shell: |
+    pvesm alloc {{ vm_tpl.storage }} {{ vm_result.vmid }} "{{ disk_name }}" {{ disk_size_w_u }} -format qcow2
+
+    qm set {{ vm_result.vmid }} -sata0 {{ disk_def }}
+    exit 0
+- name: "Start virtual machine {{ vm_tpl.hostname }}"
+  proxmox_kvm:
+    name: "{{ vm_tpl.hostname }}"
     api_user: "{{ proxmox_user }}"
     api_password: "{{ proxmox_password }}"
     api_host: "{{ proxmox_cluster_host }}"
     node: "{{ proxmox_node }}"
     pool: "{{ proxmox_pool }}"
-    vcpus: "{{ vm_template.cpus }}"
-    memory: "{{ vm_template.memory }}"
-    netif: {'net0': "virtio,bridge=vmbr1"}
-    sata: "{'sata0': 'local:{{ vm_template.disk }},format=qcow2' }"
-    ide: "{'ide0': 'template:iso/{{ vm_template.iso }},media=cdrom' }"
-    template: True
-    state: present
+    state: started
