--- a/roles/vm-management/tasks/rm-vm.yml
+++ b/roles/vm-management/tasks/rm-vm.yml
@@ -1,6 +1,6 @@
-- name: "Stop container {{ ct_template.id }} / {{ ct_template.hostname }}"
-  proxmox:
-    vmid: "{{ ct_template.id }}"
+- name: "Stop virtual machine {{ hostname }}"
+  proxmox_kvm:
+    name: "{{ hostname }}"
     api_user: "{{ proxmox_user }}"
     api_password: "{{ proxmox_password }}"
     api_host: "{{ proxmox_cluster_host }}"
@@ -8,9 +8,9 @@
     pool: "{{ proxmox_pool }}"
     force: yes
     state: stopped
-- name: "Remove container {{ ct_template.id }} / {{ ct_template.hostname }}"
-  proxmox:
-    vmid: "{{ ct_template.id }}"
+- name: "Remove virtual machine {{ hostname }}"
+  proxmox_kvm:
+    name: "{{ hostname }}"
     api_user: "{{ proxmox_user }}"
     api_password: "{{ proxmox_password }}"
     api_host: "{{ proxmox_cluster_host }}"
